# CowSpeak

./: .bash  .replit  CMakeLists.txt  CowConfig.hpp  CowSpeak.cf  InternalFunctions.cpp  InternalFunctions.h  LICENSE  LexedLine.h  Parser.h  README.md  Run.COWFILE  Utils.h  calculator.cf  convertStr.cf  helloWorld.COWFILE  input.hpp  insultUser.COWFILE  main.COWFILE  main.cpp  main.cs  math.COWFILE  randomNumberGuessr.COWFILE  randomNumberGuessr.cf  stairsMaker.COWFILE  stairsMaker.cf  start.COWFILE  stringThings.COWFILE  stringThings.cf
CowSpeak-master/: Any.cs  AssemblyInfo.cs  ByteArray.cs  Conditional.cs  Conversion.cs  CowSpeak.cs  Definition.cs  Error.cs  Evaluate.cs  Exception.cs  Executor.cs  FastStruct.cs  Function.cs  FunctionChain.cs  FunctionList.cs  Functions.cs  Interpreter.cs  Lexer.cs  Line.cs  Module.cs  ModuleSystem.cs  Scope.cs  StaticFunction.cs  Structs.cs  Syntax.cs  Token.cs  Type.cs  UserFunction.cs  Utils.cs  Variable.cs  VariableList.cs  Variables.cs  csharp-CowConfig.cs
CowSpeak-master/Exceptions/: BaseException.cs  ConversionException.cs  ModuleException.cs  NotSupportedException.cs
CowSpeak-master/Modules/: ArrayMethods.cs  ArrayMethods.md  ConversionMethods.cs  ConversionMethods.md  Linux.cs  Main.cs  Main.md  ObjectMethods.cs  ObjectMethods.md  ShorterTypeNames.cs  ShorterTypeNames.md  StringMethods.cs  StringMethods.md  (+2 more)
Examples/: benchmark.cf  binaryTest.bcf  calculator.cf  convertStr.cf  fizzBuzz.cf  hexTest.hcf  randomNumberGuessr.cf  runner.cf  stairsMaker.cf  stringThings.cf  stringUtils.cf
FastDelegate.Net/: FastDelegate.cs
(+2 files in other folders)
